feat: implement core restaurant management system including kitchen, table, order, and authentication modules